Version 0.11.0: March 3, 2015

new api: terminologyGraphImportClosure

Version 0.10.3: February 28, 2015

updated apis to support retrieving the graph associated to an entity (concept or relation currently), if any and 
the entity (concept or relation currently) associated to a graph, if any.
 
Version 0.10.2: February 28, 2015

new apis to save graphs to output streams.
changed apis for creating entity concepts & relations to include an optional IRI for creating a nested mutable terminology graph

Version 0.10.1: February 26, 2015

TDD: updated test.gov.nasa.jpl.omf.scala.core.functionalAPI.OWLVocabularyTest to exercise the new API for extending mutable graphs after construction.

Version 0.10.0: February 26, 2015

Minor: refactored the datatype relationships
Major: loosened the restrictions on the mutable graph APIs regarding extension relationships

In OMF, graphs can extend other graphs (within restrictions).

In 0.9.1, constructing a graph G required specifying the other graphs G extends.
That is, the set of graphs that G extends is defined when constructing G and is immutable afterwards.
This had some nice benefits:
- this kept the API simple (no need to worry about the set of extensions changing after construction)
- this ensured a correct-by-construction guarantee that all graph extension relationships are acyclic 
  (since the extensions must be specified when a graph is created and the API only supports creating one graph at a time)

Unfortunately, this correct-by-construction guarantee of acyclic extension relationships is too strong for UML/SysML models we want to map to OMF.

In 0.10.0, the API for creating mutable TBox graphs separates constructing a mutable TBox graph from adding extensions to a mutable TBox graph.
However, the API for creating immutable TBox graphs retains the correct-by-construction principle that the extension relationships must be specified