@@ -1,6 +1,7 @@
 Version 0.11.0: March 3, 2015
 
 new api: terminologyGraphImportClosure
+new types/api for universal vs. existential concept restriction axioms.
 
 Version 0.10.3: February 28, 2015
 
